src/include/lem/solarix/solarix_grammar_engine.h



 typedef void* HGREN_STR;

 typedef void* HGREN_INTARRAY;

 typedef void* HGREN_RESPACK;

 typedef const void* HGREN_TREENODE;

 typedef void* HGREN_SBROKER;

typedef void* HFLEXIONS;

typedef void* HFLEXIONTABLE;




// Поиск связей в тезаурусе
FAIND_API(HGREN_INTARRAY) sol_SeekThesaurus(
                                            HGREN hEngine,
                                            int iEntry,
                                            int Synonyms,
                                            int Grammar_Links,
                                            int Translations,
                                            int Semantics,
                                            int nJumps
                                           );


// Возвращает имя координаты по индексу
// Returns the grammatical category name
// http://www.solarix.ru/api/en/sol_GetCoordName.shtml
FAIND_API(int) sol_GetCoordName( HGREN hEngine, int CoordID, wchar_t *Result );



// Возвращает имя состояния координаты по ее ID
// http://www.solarix.ru/api/en/sol_GetCoordStateName.shtml
FAIND_API(int) sol_GetCoordStateName( HGREN hEngine, int CoordID, int StateID, wchar_t *Result );


// Возвращает количество состояний у координаты. Для бистабильных координат вернет 0
// http://www.solarix.ru/api/en/sol_CountCoordStates.shtml
FAIND_API(int) sol_CountCoordStates( HGREN hEngine, int CoordID );


// http://www.solarix.ru/api/ru/sol_CountRoots.shtml
// Сколько деревьев (узлов верхнего уровня) в заданном графе?
FAIND_API(int) sol_CountRoots( HGREN_RESPACK hPack, int iGraf );


// http://www.solarix.ru/api/ru/sol_GetRoot.shtml
// Получение указателя на заданный узел верхнего уровня 
FAIND_API(HGREN_TREENODE) sol_GetRoot( HGREN_RESPACK hPack, int iGraf, int iRoot );


// http://www.solarix.ru/api/ru/sol_CountLeafs.shtml
// Количество прикрепленных к данному узлу веток
FAIND_API(int) sol_CountLeafs( HGREN_TREENODE hNode );


// http://www.solarix.ru/api/ru/sol_GetLeaf.shtml
// Возвращает указатель на заданную ветку
FAIND_API(HGREN_TREENODE) sol_GetLeaf( HGREN_TREENODE hNode, int iLeaf );


// http://www.solarix.ru/api/ru/sol_GetNodeIEntry.shtml
// Возвращает индекс словарной статьи в узле
FAIND_API(int) sol_GetNodeIEntry( HGREN hEngine, HGREN_TREENODE hNode );


// http://www.solarix.ru/api/ru/sol_GetNodeContents.shtml
// Текстовое содержимое узла
FAIND_API(void) sol_GetNodeContents( HGREN_TREENODE hNode, wchar_t *Buffer );


// http://www.solarix.ru/api/ru/sol_GetNodeCoordState.shtml
// Состояние координаты для узла
FAIND_API(int) sol_GetNodeCoordState( HGREN_TREENODE hNode, int CoordID );


// http://www.solarix.ru/api/ru/sol_GetNodePairsCount.shtml
// Число различных координатных пар у узла
FAIND_API(int) sol_GetNodePairsCount( HGREN_TREENODE hNode );


// http://www.solarix.ru/api/ru/sol_GetNodePairCoord.shtml
FAIND_API(int) sol_GetNodePairCoord( HGREN_TREENODE hNode, int ipair );


// http://www.solarix.ru/api/ru/sol_GetNodePairState.shtml
FAIND_API(int) sol_GetNodePairState( HGREN_TREENODE hNode, int ipair );



FAIND_API(HGREN_SBROKER) sol_CreateSentenceBroker( HGREN hEngine, const wchar_t *Filename, const wchar_t *DefaultCodepage, int LanguageID );


FAIND_API(HGREN_SBROKER) sol_CreateSentenceBrokerMemW( HGREN hEngine, const wchar_t *Text, int LanguageID );

FAIND_API(HGREN_SBROKER) sol_CreateSentenceBrokerMemA( HGREN hEngine, const char *Text, int LanguageID );

FAIND_API(HGREN_SBROKER) sol_CreateSentenceBrokerMem8( HGREN hEngine, const char *TextUtf8, int LanguageID );

FAIND_API(int) sol_FetchSentence( HGREN_SBROKER hBroker );

FAIND_API(int) sol_GetFetchedSentenceW( HGREN_SBROKER hBroker, wchar_t *Buffer );

FAIND_API(int) sol_GetFetchedSentenceA( HGREN_SBROKER hBroker, char *Buffer );

FAIND_API(int) sol_GetFetchedSentence8( HGREN_SBROKER hBroker, char *BufferUtf8 );

FAIND_API(void) sol_DeleteSentenceBroker( HGREN_SBROKER hBroker );




// Split the string into words, using the rules for language with given ID
// http://www.solarix.ru/api/ru/sol_Tokenize.shtml
FAIND_API(HGREN_STR) sol_TokenizeW( HGREN hEngine, const wchar_t *Sentence, int LanguageID );

FAIND_API(HGREN_STR) sol_TokenizeA( HGREN hEngine, const char *Sentence, int LanguageID );

FAIND_API(HGREN_STR) sol_Tokenize8( HGREN hEngine, const char *SentenceUtf8, int LanguageID );
 #define sol_Tokenize sol_TokenizeW
 #define sol_Tokenize sol_TokenizeA


// N-grams database lookup
// http://www.solarix.ru/for_developers/api/ngrams-api.shtml
FAIND_API(int) sol_Seek1Grams( HGREN hEngine, int type, const wchar_t *word1 );

FAIND_API(int) sol_Seek2Grams( HGREN hEngine, int type, const wchar_t *word1, const wchar_t *word2 );

FAIND_API(int) sol_Seek3Grams( HGREN hEngine, int type, const wchar_t *word1, const wchar_t *word2, const wchar_t *word3 );

FAIND_API(int) sol_Seek4Grams( HGREN hEngine, int type, const wchar_t *word1, const wchar_t *word2, const wchar_t *word3, const wchar_t *word4 );

FAIND_API(int) sol_Seek5Grams( HGREN hEngine, int type, const wchar_t *word1, const wchar_t *word2, const wchar_t *word3, const wchar_t *word4, const wchar_t *word5 );

FAIND_API(int) sol_CountNGrams( HGREN hEngine, int type, int Order, unsigned int *Hi, unsigned int *Lo );




FAIND_API(int) sol_CountInts( HGREN_INTARRAY h );

FAIND_API(int) sol_GetInt( HGREN_INTARRAY h, int i );

FAIND_API(void) sol_DeleteInts( HGREN_INTARRAY h );


// Flexion Engine: guess suitable flexion handlers for the word
FAIND_API(HFLEXIONS) sol_FindFlexionHandlers( HGREN hEngine, const wchar_t *WordBasicForm, int SearchEntries );


// Flexion engine: return the number of matching entries
FAIND_API(int) sol_CountEntriesInFlexionHandlers( HGREN hEngine, HFLEXIONS hFlexs );


// Flexion engine: return the number of matching paradigmas
FAIND_API(int) sol_CountParadigmasInFlexionHandlers( HGREN hEngine, HFLEXIONS hFlexs );


// Flexion engine: return the entry ID
FAIND_API(int) sol_GetEntryInFlexionHandlers( HGREN hEngine, HFLEXIONS hFlexs, int Index );


// Flexion engine: return the paradigma internal index and human-friendly name
FAIND_API(int) sol_GetParadigmaInFlexionHandlers( HGREN hEngine, HFLEXIONS hFlexs, int Index, wchar_t *ParadigmaName );


FAIND_API(HFLEXIONTABLE) sol_BuildFlexionHandler(
                                                 HGREN hEng,
                                                 HFLEXIONS hFlexs,
                                                 const wchar_t *ParadigmaName,
                                                 int EntryIndex
                                                );


FAIND_API(const wchar_t*) sol_GetFlexionHandlerWordform( HGREN hEngine, HFLEXIONTABLE hFlex, const wchar_t *dims );


FAIND_API(int) sol_DeleteFlexionHandlers( HGREN hEng, HFLEXIONS hFlexs );

FAIND_API(int) sol_DeleteFlexionHandler( HGREN hEng, HFLEXIONTABLE hFlex );




// http://www.solarix.ru/api/en/sol_FindPhrase.shtml
FAIND_API(int) sol_FindPhrase( HGREN hEng, const wchar_t *Phrase, int Flags );

FAIND_API(int) sol_AddPhrase( HGREN hEngine, const wchar_t *Phrase, int LanguageID, int PartOfSpeechID, int ProcessingFlags );