src/include/lem/solarix/GrammarEngineApi.pas


// http://www.solarix.ru/api/ru/sol_CountRoots.shtml
function sol_CountRoots( hPack: PInteger; iGraf: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountRoots';

// http://www.solarix.ru/api/ru/sol_GetRoot.shtml
function sol_GetRoot( hPack: PInteger; iGraf: Integer; iRoot: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetRoot';

// http://www.solarix.ru/api/ru/sol_CountLeafs.shtml
function sol_CountLeafs( hNode: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountLeafs';

// http://www.solarix.ru/api/ru/sol_GetLeaf.shtml
function sol_GetLeaf( hNode: PInteger; iLeaf: Integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetLeaf';

// http://www.solarix.ru/api/ru/sol_GetNodeIEntry.shtml
function sol_GetNodeIEntry( Engine: PInteger; hNode: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNodeIEntry';

// http://www.solarix.ru/api/ru/sol_GetNodeContents.shtml
procedure sol_GetNodeContents( hNode: PInteger; Buffer: PWideChar ); stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNodeContents';

// http://www.solarix.ru/api/ru/sol_GetNodePairsCount.shtml
function sol_GetNodePairsCount( hNode: PInteger ): integer;  stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNodePairsCount';

// http://www.solarix.ru/api/ru/sol_GetNodeCoordState.shtml
function sol_GetNodeCoordState( hNode: PInteger; CoordID: Integer ): integer;  stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNodeCoordState';

// http://www.solarix.ru/api/ru/sol_GetNodePairCoord.shtml
function sol_GetNodePairCoord( hNode: PInteger; ipair: Integer ): integer;  stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNodePairCoord';

// http://www.solarix.ru/api/ru/sol_GetNodePairState.shtml
function sol_GetNodePairState( hNode: PInteger; ipair: Integer ): integer;  stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetNodePairState';


function sol_SeekThesaurus(
                           Engine: PInteger;
                           iEntry: Integer;
                           Synonyms: Integer;
                           Grammar_Links: Integer;
                           Translations: Integer;
                           Semantics: Integer;
                           nJumps: Integer
                          ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_SeekThesaurus';


// Группа функций сегментатора - разбивка текста на предложения и разбивка предложений на слова

// http://www.solarix.ru/api/ru/sol_CreateSentenceBroker.shtml
function sol_CreateSentenceBroker( Engine: PInteger; Filename: PWideChar; DefaultCodepage: PWideChar; Language: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CreateSentenceBroker';

// http://www.solarix.ru/api/ru/sol_CreateSentenceBrokerMem.shtml
function sol_CreateSentenceBrokerMemW( Engine: PInteger; Text: PWideChar; Language: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CreateSentenceBrokerMemW';
function sol_CreateSentenceBrokerMemA( Engine: PInteger; Text: PAnsiChar; Language: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CreateSentenceBrokerMemA';
function sol_CreateSentenceBrokerMem8( Engine: PInteger; TextUtf8: PAnsiChar; Language: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CreateSentenceBrokerMem8';

// http://www.solarix.ru/api/ru/sol_FetchSentence.shtml
function sol_FetchSentence( hBroker: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FetchSentence';

// http://www.solarix.ru/api/ru/sol_GetFetchedSentence.shtml
function sol_GetFetchedSentenceW( hBroker: PInteger; Buffer: PWideChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetFetchedSentenceW';
function sol_GetFetchedSentenceA( hBroker: PInteger; Buffer: PAnsiChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetFetchedSentenceA';
function sol_GetFetchedSentence8( hBroker: PInteger; Buffer: PAnsiChar ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetFetchedSentence8';

// http://www.solarix.ru/api/ru/sol_DeleteSentenceBroker.shtml
procedure sol_DeleteSentenceBroker( hBroker: PInteger ); stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteSentenceBroker';

// http://www.solarix.ru/api/ru/sol_Tokenize.shtml
function sol_TokenizeW( Engine: PInteger; Sentence: PWideChar; id_lang: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_TokenizeW';
function sol_TokenizeA( Engine: PInteger; Sentence: PAnsiChar; id_lang: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_TokenizeA';
function sol_Tokenize8( Engine: PInteger; Sentence: PAnsiChar; id_lang: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Tokenize8';

// http://www.solarix.ru/api/ru/sol_CountInts.shtml
function sol_CountInts( hIntList: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountInts';

// http://www.solarix.ru/api/ru/sol_GetInt.shtml
function sol_GetInt( hIntList: PInteger; i: Integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetInt';

// http://www.solarix.ru/api/ru/sol_DeleteInts.shtml
procedure sol_DeleteInts( hIntList: PInteger ); stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteInts';


{ --- NGRAMS DATABASE ACCESS FUNCTIONS --- }

{ http://www.solarix.ru/api/en/sol_CountNGrams.shtml }
function sol_CountNGrams( hEngine: PInteger; Flags: Integer; Order: Integer; Hi: PInteger; Lo: PInteger ): Integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountNGrams';

function sol_CountNGrams64( hEngine: PInteger; Flags: Integer; Order: Integer ): Int64;

{ http://www.solarix.ru/api/en/sol_Seek1Grams.shtml }
function sol_Seek1Grams( hEngine: PInteger; Flags: Integer; Word1: PWideChar ): Integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Seek1Grams';

{ http://www.solarix.ru/api/en/sol_Seek2Grams.shtml }
function sol_Seek2Grams( hEngine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar ): Integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Seek2Grams';

{ http://www.solarix.ru/api/en/sol_Seek3Grams.shtml }
function sol_Seek3Grams( hEngine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; Word3: PWideChar ): Integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Seek3Grams';

{ http://www.solarix.ru/api/en/sol_Seek4Grams.shtml }
function sol_Seek4Grams( hEngine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; Word3: PWideChar; Word4: PWideChar ): Integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Seek4Grams';

{ http://www.solarix.ru/api/en/sol_Seek5Grams.shtml }
function sol_Seek5Grams( hEngine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; Word3: PWideChar; Word4: PWideChar; Word5: PWideChar ): Integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Seek5Grams';




function sol_FindFlexionHandlers(
                                 hEngine: PInteger;
                                 WordBasicForm: PWideChar;
                                 SearchEntries: integer
                                ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindFlexionHandlers';

function sol_CountEntriesInFlexionHandlers(
                                           hEngine: PInteger;
                                           hFlexs: PInteger
                                          ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountEntriesInFlexionHandlers';

function sol_CountParadigmasInFlexionHandlers(
                                              hEngine: PInteger;
                                              hFlexs: PInteger
                                             ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountParadigmasInFlexionHandlers';

function sol_GetEntryInFlexionHandlers(
                                       hEngine: PInteger;
                                       hFlexs: PInteger;
                                       Index: integer
                                      ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetEntryInFlexionHandlers';

function sol_GetParadigmaInFlexionHandlers(
                                           hEngine: PInteger;
                                           hFlexs: PInteger;
                                           Index: integer;
                                           ParadigmaName: PWideChar
                                          ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetParadigmaInFlexionHandlers';

function sol_BuildFlexionHandler(
                                 hEngine: PInteger;
                                 hFlexs: PInteger;
                                 ParadigmaName: PWideChar;
                                 EntryIndex: integer
                                ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_BuildFlexionHandler';

function sol_GetFlexionHandlerWordform(
                                       hEngine: PInteger;
                                       hFlex: PInteger;
                                       dims: PWideChar
                                      ): PWideChar; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetFlexionHandlerWordform';


function sol_DeleteFlexionHandlers(
                                   hEngine: PInteger;
                                   hFlexs: PInteger
                                  ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteFlexionHandlers';

function sol_DeleteFlexionHandler(
                                  hEngine: PInteger;
                                  hFlex: PInteger
                                 ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteFlexionHandler';

// http://www.solarix.ru/api/ru/sol_GetCoordName.shtml
function sol_GetCoordName(
                          hEngine: PInteger;
                          id_coord: integer;
                          name: PWideChar
                         ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetCoordName';

// http://www.solarix.ru/api/ru/sol_GetCoordStateName.shtml
function sol_GetCoordStateName(
                               hEngine: PInteger;
                               id_coord: integer;
                               id_state: integer;
                               name: PWideChar
                              ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetCoordStateName';

// http://www.solarix.ru/api/ru/sol_CountCoordStates.shtml
function sol_CountCoordStates(
                              hEngine: PInteger;
                              id_coord: integer
                             ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_CountCoordStates';


// http://www.solarix.ru/api/ru/sol_FindPhrase.shtml
function sol_FindPhrase( hEngine: PInteger; Phrase: PWideChar; Flags: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_FindPhrase';

// http://www.solarix.ru/api/ru/sol_AddPhrase.shtml
function sol_AddPhrase( hEngine: PInteger; text: PWideChar; LanguageID: integer; ClassID: integer; ProcessingFlags: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_AddPhrase';
